# gameoflife

./: .gitignore  CMakeLists.txt  README.md  suppr.txt
data/: gol.profdata
data/patterns/: 4812diamond.txt
lib/argtable3/: argtable3.c
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
lib/log/: log.c  log.h
src/: defines.h  life.c  life.h  main.c  perf.c  perf.h  utils.c  utils.h
